<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <TextView
        android:id="@+id/textViewLocationAvailable"
        android:layout_width="342dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_border"
        android:gravity="center"
        android:text="@string/location_no_available"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="185dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:autofillHints="123456789"
        android:background="@drawable/custom_border"
        android:labelFor="@id/buttonSaveNumber"
        android:paddingStart="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocationAvailable"
        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonSaveNumber"
        android:layout_width="123dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_border"
        android:text="@string/save"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocationAvailable"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spinnerInfo"
        android:layout_width="333dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_border"
        android:paddingStart="8sp"
        android:paddingEnd="8sp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="296dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/address"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerInfo" />

    <include
        android:id="@+id/include_time_layout"
        layout="@layout/time_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddress" />

    <Button
        android:id="@+id/buttonSearchLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginTop="12dp"
        android:text="@string/search"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonClear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_time_layout" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="clear"
        app:layout_constraintEnd_toStartOf="@+id/buttonSendSMS"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonSearchLocation"
        app:layout_constraintTop_toTopOf="@+id/buttonSearchLocation" />

    <Button
        android:id="@+id/buttonSendSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32sp"
        android:text="@string/send"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonClear"
        app:layout_constraintTop_toTopOf="@+id/buttonClear" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_border"
        android:text="@string/status"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="78dp"
        android:layout_height="83dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="180dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <include
        layout="@layout/table_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42sp"
        android:layout_marginTop="12sp"
        android:layout_marginEnd="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStatus" />


</androidx.constraintlayout.widget.ConstraintLayout>